crates/language-v2/tests/src/fail/p0_parsing/unrecognized_field/test.stderr
error: unexpected token, expected `)`
  --> src/fail/p0_parsing/unrecognized_field/test.rs:18:13
   |
18 |             unrecognized_field = true
   |             ^^^^^^^^^^^^^^^^^^
